Bug 100313 - Impress: crash when modify object in Slide Master
Summary: Impress: crash when modify object in Slide Master
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-06-10 14:59 UTC by gmolleda
Modified: 2017-02-16 15:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Change rectangle in SlideMaster and crack... (19.95 KB, application/vnd.oasis.opendocument.presentation)
2016-06-10 14:59 UTC, gmolleda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gmolleda 2016-06-10 14:59:28 UTC
Created attachment 125588 [details]
Change rectangle in SlideMaster and crack...

Open impress in terminal:
libreoffice --impress

Open the attach file.

Go to menu "View - Master - Slide Master"
Select the horizontal rectangle, below the title text
Go to menu "Format - Area..."
Go to "Gradients", change Type to other and pusth the OK button, repeat sometimes (1 or until 7) and --> crack, in terminal you see:
(soffice:XXXX): Gtk-CRITICAL **: IA__gtk_widget_get_screen: assertion 'GTK_IS_WIDGET (widget)' failed

(soffice:XXXX): Gtk-CRITICAL **: IA__gtk_widget_get_screen: assertion 'GTK_IS_WIDGET (widget)' failed

XXXX is a number of 4 digits.

My LibreOffice 5.0.3.2
Comment 1 raal 2016-06-10 15:25:18 UTC
I can confirm with Version: 5.3.0.0.alpha0+
Build ID: 86d84ae4bba0d4c45bc13232645318291a8aed75
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-05-26_14:33:24
Comment 2 raal 2016-06-10 15:34:48 UTC
works in LO 3.5
Comment 3 gmolleda 2016-06-10 16:36:23 UTC
Works in Windows XP, LibreOffice 4.4.1.2
Comment 4 Julien Nabet 2016-06-11 07:09:49 UTC
On pc Debian x86-64 with master sources updated yesterday (+rendering=gtk3), I don't reproduce this.
Comment 5 gmolleda 2016-06-11 11:31:02 UTC
Work well in same OS (Linux Mint 17.3) but uninstalled libreoffice 5.0.3.2 and installed Libreoffice Still 5.0.6.3 downloaded from libreoffice.org.
sudo apt-get purge libreoffice*
tar xzvf LibreOffice_5.0.6_Linux_x86-64_deb.tar.gz
cd .../DEBS
sudo dpkg -i *.deb
Comment 6 Julien Nabet 2016-06-11 11:32:53 UTC
Just nitpicking, since there's no fix, I put it at WFM.
Comment 7 Caolán McNamara 2016-06-11 13:39:03 UTC
Sounds a lot like bug #91880. I think I can reproduce this sometimes FWIW
Comment 8 Caolán McNamara 2016-06-11 13:49:10 UTC
same underlying problem as 26c32cfee9fc9a769adba19f455e4d6c13b6d89d tried to fix I believe
Comment 9 Caolán McNamara 2016-06-12 15:13:09 UTC
ah, what I'm seeing is that the fix of 26c32cfee9fc9a769adba19f455e4d6c13b6d89d has come unstuck since

commit 51fe4d63dfdf0ea24d2fecf75d25cbe607ed1c09
Author: melikeyurtoglu <aysemelikeyurtoglu@gmail.com>
Date:   Tue May 3 00:34:05 2016 +0300

    tdf#97527 vcl: reference-count Menu

which moved isDisposed down to a new VclReferenceBase but left a duplicate mbDisposed in OutputDevice so the mbDisposed set on dispose and the mbDisposed read by isDisposed are two different things
Comment 10 Commit Notification 2016-06-12 18:00:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=29eac0e49e372092cb119898e9f1116ab4e00532

Resolves: tdf#100313 OutputDevice::isDisposed doesn't work anymore

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-06-12 18:48:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bcd0360f0bf3536267c02783a220be34684576f9&h=libreoffice-5-2

Resolves: tdf#100313 OutputDevice::isDisposed doesn't work anymore

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2016-06-12 19:24:27 UTC
The bug should affect gtk2, not gtk3, and probably only gtk2. It should be ok in the last 5.0.X release I think, and should be also good in 5.1 series. It went wrong (again) in 5-2 and master and those are fixed again now.